switched to momentjs

--- a/public/index.html
+++ b/public/index.html
@@ -25,8 +25,7 @@
 	<h2>Example Usage</h2>
 	<code><a href="https://peaceful-coast-28289.herokuapp.com/November%2025,%202016">https://peaceful-coast-28289.herokuapp.com/November%2025,%202016</a><br/>
 	<a href="https://peaceful-coast-28289.herokuapp.com/November 25, 2016">https://peaceful-coast-28289.herokuapp.com/November 25, 2016</a><br/>
-	<a href="https://peaceful-coast-28289.herokuapp.com/1450137600">https://peaceful-coast-28289.herokuapp.com/1450137600</a><br/>
-	<a href="https://peaceful-coast-28289.herokuapp.com/1450137600000">https://peaceful-coast-28289.herokuapp.com/1450137600000</a></code>
+	<a href="https://peaceful-coast-28289.herokuapp.com/1450137600">https://peaceful-coast-28289.herokuapp.com/1450137600</a><br/></code>
 	<h2>Example Output</h2>
 	<code>{
 "unix": 1480032000,
